// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login component test 1`] = `
<div>
  <p>
    Login
  </p>
  <input
    onChange={[Function]}
    type="text"
  />
  <button
    onClick={[Function]}
  >
    click me
  </button>
</div>
`;

exports[`MainContent component test 1`] = `
<div>
  <div>
    <button
      onClick={[Function]}
    >
      Create Article
    </button>
  </div>
</div>
`;
